# imApp

./: .gitignore  README.md
imApp/: CMakeLists.txt  imApp_en_DE.ts  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
imApp/app/: README.md
imApp/app/include/: WorkerThread.h
imApp/app/src/: CMakeLists.txt  WorkerThread.cpp
imApp/lib/: CMakeLists.txt  README.md
imApp/lib/include/: CMakeLists.txt
imApp/lib/src/: CMakeLists.txt
images/: README.md  baboon.tiff  crowd.tiff
