#
# Copyrigth: Alexander Kozhinov
# E-Mail: AlexanderKozhinov@yandex.com
#

cmake_minimum_required(VERSION 3.5)

# set(MODULE_NAME_0 "WorkerThread")

# include_directories("${CMAKE_CURRENT_SOURCE_DIR}/../include")

# add_library(${MODULE_NAME_0} STATIC
#             ${MODULE_NAME_0}.cpp
#             )

# target_link_libraries(${MODULE_NAME_0} PRIVATE Qt::Widgets)
